# koop

./: .gitignore  Cargo.toml  Makefile  w
src/: lib.rs
src/acpi/: .gitignore  Cargo.toml
src/acpi/src/: header.rs  lib.rs  madt.rs  table.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm  multiboot_header.asm
src/asm/: Cargo.toml
src/asm/src/: lib.rs  x86_64.rs
src/grub/: grub.cfg
src/idt/: Cargo.toml
src/idt/src/: entry.rs  handlers.rs  lib.rs
src/mem/: Cargo.toml
src/mem/src/: addr.rs  allocator.rs  area.rs  bits.rs  block.rs  buddies.rs  entry.rs  frame.rs  lib.rs  memtree.rs  page.rs  page_manager.rs  pool.rs  slab.rs  stack.rs  stage1.rs  stage2.rs  table.rs
src/mmio/: Cargo.toml
src/mmio/src/: lib.rs
src/multiboot2/: Cargo.toml
src/multiboot2/src/: basic_mem_info.rs  elf.rs  lib.rs  mem_map.rs  rsdp.rs
src/pic/: Cargo.toml
src/pic/src/: apic.rs  ioapic.rs  lapic.rs  lib.rs  pic.rs  timer.rs
src/serial/: Cargo.toml
src/serial/src/: lib.rs
src/spinlock/: Cargo.toml
src/spinlock/src/: lib.rs
src/vga/: Cargo.toml
src/vga/src/: lib.rs
