[package]
name = "koop"
version = "0.1.0"
authors = ["Guillaume Chainet <gchainet@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vga = { path = "src/vga/" }

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
