[package]
name = "koop"
version = "0.1.0"
authors = ["Guillaume Chainet <gchainet@student.42.fr>"]
edition = "2018"

[dependencies]
vga = { path = "src/vga/" }
serial = { path = "src/serial/" }
spinlock = { path = "src/spinlock/" }

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
